--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,10 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
-/.idea/Rails_Basic.iml
-.idea/.generators
 test/fixtures/*
 test/models/*
-.idea/dictionaries/*
 config/database.yml
+.idea/*
+.generators
+.rakeTasks
+test/controllers/*.rb
