--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,6 @@ email_regex: !ruby/regexp '/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i'
 remember_me: 1
 min_password_length: 6
 per_page: 10
+content_length: 200
+file_size: 5
+file_type: "image/jpeg image/gif image/png"
